# rokae_move

./: .gitignore  CMakeLists.txt  READMe.md  READMe.txt  package.xml
archive/: pipe_rokae_force.cpp  sensor_with_robot_arm.py
doc/: git_change.md  git_standard.md  project_requirement_multiple_thread.md  rokae_imitation_system_architecture.md
example/: cartesian_impedance_control.cpp  path_record.cpp  trajectoryPoint.md
include/rokae_move/: model.h  print_helper.hpp
include/rokae_node/: rokae_move_node.hpp  rokae_robot_controller.hpp  sensor_shared_data.hpp  trajectory_generator.hpp
src/: rokae_force_impedance.cpp  rokae_move.cpp  rokae_move_node.cpp  rokae_robot_controller.cpp  sensor_with_robot_arm.py  test_impedance_force_node.cpp  test_impedance_force_ros.py  trajectory_generator.cpp  trajectory_verifi_plot.py  trajectory_verification.cpp  trajectory_verification.py
src/archive/: pipe_rokae_force.cpp  rokae_force.cpp
